--- a/index.html
+++ b/index.html
@@ -39,10 +39,9 @@
     <section class="home" id="home">
         <div class="max-width">
             <div class="home-content">
-                <div class="text-1">Hello, Welcome to </div>
-                <div class="text-2">GRIET protfolio</div>
-                <div class="text-3">Excellence is our motive-<span class="typing"></span></div>
-                <a href="https:\\www.griet.ac.in">Website</a>
+                <div class="text-1">Hey! </div>
+                <div class="text-2">I’m Sowmyasri Porandla from Warangal!</div>
+                <div class="text-3">Feel free to get in touch.</div>
             </div>
         </div>
     </section>
@@ -56,54 +55,24 @@
                     <img src="logo.png" alt="">
                 </div>
                 <div class="column right">
-                    <div class="text">GRIET is a Hub of-<span class="typing-2"></span></div>
-                    <p>Programs offered B.Tech and M.Tech.</p>
-                    <p>Accrediations NBA, NAAC A++</p>
-                    <a href="B.TECH GR22 AIML.pdf">Download Syllabus</a>
+                    <div class="text">My moto-<span class="typing-2"></span></div>
+                    <p>I am an organised, efficient and hard working person, and am willing to discover and accept new ideas which can be put into practice effectively. </p>
+                    <p>I am a good listener and learner, able to communicate well with a group and on an individual level.</p>
                 </div>
             </div>
         </div>
     </section>
 
-    <!-- services section start -->
-    <section class="services" id="services">
-        <div class="max-width">
-            <h2 class="title">Services</h2>
-            <div class="serv-content">
-                <div class="card">
-                    <div class="box">
-                        <i class="fas fa-paint-brush"></i>
-                        <div class="text">Design</div>
-                        <p>We do provide knowledge in Web Designing using Angular, React JS and Various Emerging Technologies.</p>
-                    </div>
-                </div>
-                <div class="card">
-                    <div class="box">
-                        <i class="fas fa-lock"></i>
-                        <div class="text">Security</div>
-                        <p>We do provide knowledge in Cyber Security and Ethical Hacking, Cyber Forensics, IoT security and Many More.</p>
-                    </div>
-                </div>
-                <div class="card">
-                    <div class="box">
-                        <i class="fas fa-code"></i>
-                        <div class="text">Web Development</div>
-                        <p>We do provide knowledge in Node.JS, Express.JS, Mongo DB, GIT,  GitHub and lot more.</p>
-                    </div>
-                </div>
-               </div>
-            </div>
-        </div>
-    </section>
+   
 
     <!-- skills section start -->
     <section class="skills" id="skills">
         <div class="max-width">
-            <h2 class="title">Our Students skills</h2>
+            <h2 class="title">Professional skills</h2>
             <div class="skills-content">
                 <div class="column left">
-                    <div class="text">Our Students creative skills & experiences.</div>
-                    <p>Our Students are web and app designers. Our students can create Dynamic web Applications in MEAN and MERN Stack. </p>
+                    <div class="text">creative skills & experiences.</div>
+                    <p>Ambitious Frontend Web Developer</p>
                     <a href="#">Read more</a>
                 </div>
                 <div class="column right">
@@ -138,7 +107,7 @@
                     <div class="bars">
                         <div class="info">
                             <span>MySQL</span>
-                            <span>80%</span>
+                            <span>30%</span>
                         </div>
                         <div class="line mysql"></div>
                     </div>
@@ -147,50 +116,7 @@
         </div>
     </section>
 
-    <!-- teams section start -->
-    <section class="teams" id="teams">
-        <div class="max-width">
-            <h2 class="title">Our Student Works</h2>
-            <div class="carousel owl-carousel">
-                <div class="card">
-                    <div class="box">
-                        <img src="logo.svg" alt="">
-                        <div class="text">Rock Paper Scissor</div>
-                        <p>A fun game made using basic html, css and javascript.</p>
-                    </div>
-                </div>
-                <div class="card">
-                    <div class="box">
-                        <img src="clock.png" alt="">
-                        <div class="text">Clock</div>
-                        <p>A simple clock with real time made using html, css and javascript.</p>
-                    </div>
-                </div>
-                <div class="card">
-                    <div class="box">
-                        <img src="cricket.jpg" alt="">
-                        <div class="text">Cric News</div>
-                        <p>A cricket related website which was made as a part of practice using html, css and bit of bootstrap.</p>
-                    </div>
-                </div>
-                <div class="card">
-                    <div class="box">
-                        <img src="biodata.png" alt="">
-                        <div class="text">Bio Data</div>
-                        <p>A website which has my biodata, made using css and html.</p>
-                    </div>
-                </div>
-                <div class="card">
-                    <div class="box">
-                        <img src="fox simple logo.png" alt="">
-                        <div class="text">Portfolio</div>
-                        <p>A portfolio website built using html, css and javascript.</p>
-                    </div>
-                </div>
-            </div>
-        </div>
-    </section>
-
+    
     <!-- contact section start -->
     <section class="contact" id="contact">
         <div class="max-width">
@@ -205,7 +131,7 @@
                             <i class="fas fa-user"></i>
                             <div class="info">
                                 <div class="head">Name</div>
-                                <div class="sub-title">GRIET</div>
+                                <div class="sub-title">Sowmyasri</div>
                             </div>
                         </div>
                         <div class="row">
@@ -219,7 +145,7 @@
                             <i class="fas fa-envelope"></i>
                             <div class="info">
                                 <div class="head">Email</div>
-                                <div class="sub-title">griet@gmail.com</div>
+                                <div class="sub-title">nandhu@gmail.com</div>
                             </div>
                         </div>
                     </div>
@@ -253,7 +179,7 @@
 
     <!-- footer section start -->
     <footer>
-        <span>Created By <a href="#">Griet</a> | <span class="far fa-copyright"></span> 2023 All rights reserved.</span>
+        <span>Created By <a href="#">soumyasre</a> | <span class="far fa-copyright"></span> 2023 All rights reserved.</span>
     </footer>
 
     <script src="script.js"></script>
