--- a/index.html
+++ b/index.html
@@ -20,13 +20,11 @@
     </div>
     <nav class="navbar">
         <div class="max-width">
-            <div class="logo"><a href="#"><span>Portfolio</span></a></div>
+            <div class="logo"><a href="#"><span>My Portfolio</span></a></div>
             <ul class="menu">
                 <li><a href="#home" class="menu-btn">Home</a></li>
                 <li><a href="#about" class="menu-btn">About</a></li>
-                <li><a href="#services" class="menu-btn">Services</a></li>
                 <li><a href="#skills" class="menu-btn">Skills</a></li>
-                <li><a href="#teams" class="menu-btn">Work</a></li>
                 <li><a href="#contact" class="menu-btn">Contact</a></li>
             </ul>
             <div class="menu-btn">
@@ -52,7 +50,7 @@
             <h2 class="title">About</h2>
             <div class="about-content">
                 <div class="column left">
-                    <img src="logo.png" alt="">
+                    <img src="OIP.jpeg" alt="">
                 </div>
                 <div class="column right">
                     <div class="text">My moto-<span class="typing-2"></span></div>
